src/objects/Propuesta_de_Abono__c.object
<CustomObject>
    <fields>
        <fullName>AB_CAS_Abono_Automatico__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Representa si el abono es generado de forma automática</description>
        <label>Abono Automático</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_CAS_Abono_Liquidado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Abono Liquidado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB_DAT_Fecha_Liquidacion__c</fullName>
        <label>Fecha Liquidación</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB_DIV_Importe_a_Imputar2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar (Gestor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB_DIV_Importe_a_Imputar3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar (Gestor)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB_DIV_Importe_a_Imputar4__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar (Prof)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB_DIV_Importe_a_imputar_Departamento__c</fullName>
        <label>Importe a imputar (Departamento)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB_DIV_Importe_a_ingresar__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a ingresar (CIA/Cliente)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB_DIV_Importe_penalizacion__c</fullName>
        <label>Importe penalización</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AB_FOR_Compania__c</fullName>
        <formula>AB_LKP_Caso__r.CAS_LKP_Compania__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_FOR_Cuenta_Bancaria__c</fullName>
        <formula>AB_LKP_Cuenta__r.CUE_FOR_IBAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cta. Bancaria: IBAN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_FOR_Direccion_Territorial__c</fullName>
        <formula>TEXT(AB_LKP_Caso__r.CAS_SEL_Direccion_Territorial__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dirección Territorial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_FOR_Procedencia__c</fullName>
        <formula>AB_LKP_Caso__r.CAS_LKP_Procedencia__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedencia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intervención</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Propuestas de Abonos</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Cuenta_Profesional_Historico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Cuenta Profesional Contrato (Histórico) vinculada al Abono. Representa la FK al objeto Account. Para resolver esta FK en integración (servicios web) y migración (plantillas DataLoader) se debe informar el valor del campo External ID del objeto Account (Account.CUE_TXT_Identificador): Código único del Profesional Contrato</description>
        <label>Cuenta Profesional (Histórico)</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>El valor no existe o no coinciden los criterios de filtro. La cuenta debe ser un Profesional Contrato.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Profesional Contrato</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Propuestas de Abonos histórico</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Cuenta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuenta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Propuestas de Abonos</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Factura__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factura</label>
        <referenceTo>Factura__c</referenceTo>
        <relationshipLabel>Propuestas de Abonos</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Imputar_a2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a (Gestor)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Propuestas_de_Abonos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Imputar_a3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a (Gestor)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Propuestas_de_Abonos2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Imputar_a4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a (Prof)</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Propuestas de Abonos</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Ingresar_a__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ingresar a (CIA/Cliente)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Propuestas de Abonos (Ingresar a)</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Orden_de_Trabajo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Número Servicio</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Propuestas de Abonos</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_LKP_Penalizar_a_Prof__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Penalizar a (Prof)</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Propuestas de Abonos (Penalizar a (Prof))</relationshipLabel>
        <relationshipName>Propuestas_de_Abonos3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB_SEL_Departamento_Imputacion__c</fullName>
        <label>Departamento Imputación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB_SEL_Departamento_Solicitante__c</fullName>
        <label>Departamento Solicitante</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Departamento_Solicitante</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB_SEL_Descripcion_evento__c</fullName>
        <label>Descripción evento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>E01</fullName>
                </value>
                <value>
                    <fullName>E02</fullName>
                </value>
                <value>
                    <fullName>E03</fullName>
                </value>
                <value>
                    <fullName>E04</fullName>
                </value>
                <value>
                    <fullName>E11</fullName>
                </value>
                <value>
                    <fullName>E15</fullName>
                </value>
                <value>
                    <fullName>E16</fullName>
                </value>
                <value>
                    <fullName>E17</fullName>
                </value>
                <value>
                    <fullName>E18</fullName>
                </value>
                <value>
                    <fullName>E19</fullName>
                </value>
                <value>
                    <fullName>E20</fullName>
                </value>
                <value>
                    <fullName>E21</fullName>
                </value>
                <value>
                    <fullName>E22</fullName>
                </value>
                <value>
                    <fullName>E29</fullName>
                </value>
                <value>
                    <fullName>E37</fullName>
                </value>
                <value>
                    <fullName>E30</fullName>
                </value>
                <value>
                    <fullName>E31</fullName>
                </value>
                <value>
                    <fullName>E34</fullName>
                </value>
                <value>
                    <fullName>E32</fullName>
                </value>
                <value>
                    <fullName>E33</fullName>
                </value>
                <value>
                    <fullName>E36</fullName>
                </value>
                <value>
                    <fullName>E25</fullName>
                </value>
                <value>
                    <fullName>E26</fullName>
                </value>
                <value>
                    <fullName>E23</fullName>
                </value>
                <value>
                    <fullName>E24</fullName>
                </value>
                <value>
                    <fullName>E28</fullName>
                </value>
                <value>
                    <fullName>E35</fullName>
                </value>
                <value>
                    <fullName>E12</fullName>
                </value>
                <value>
                    <fullName>E111</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB_SEL_Estado__c</fullName>
        <label>Estado</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>En Curso</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Aprobado</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Rechazado</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <default>true</default>
                    <label>Nuevo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB_SEL_Motivo_devolucion__c</fullName>
        <label>Motivo devolución</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>ERROR TRAMITACIÓN</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>TRABAJOS MAL REALIZADO</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>SUPERA LÍMITE</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>DEVOLUCIÓN PRIMA</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>LOCALIZACIÓN ERRÓNEA</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>DEVOLUCIÓN CONTADO</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>NO COBERTURA</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>DESPERFECTOS</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>ERROR INFORMATICO</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>ERROR VALORACIONES</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>DEVOLUCIÓN VISITA</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>GESTO COMERCIAL</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>MINUTA PERITO</label>
                </value>
                <value>
                    <fullName>14</fullName>
                    <label>ERROR IVA</label>
                </value>
                <value>
                    <fullName>15</fullName>
                    <label>EXCESO MANO DE OBRA</label>
                </value>
                <value>
                    <fullName>16</fullName>
                    <label>EXCESO MATERIAL</label>
                </value>
                <value>
                    <fullName>17</fullName>
                    <label>EXCESO MANO DE OBRA Y MATERIAL</label>
                </value>
                <value>
                    <fullName>18</fullName>
                    <label>DEVOLUCIÓN FEE</label>
                </value>
                <value>
                    <fullName>19</fullName>
                    <label>INDEMNIZACIÓN</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>ERROR VALORACIONES (BAREMO CIA)</label>
                </value>
                <value>
                    <fullName>21</fullName>
                    <label>ERROR CEVECO</label>
                </value>
                <value>
                    <fullName>22</fullName>
                    <label>ERROR LZ</label>
                </value>
                <value>
                    <fullName>23</fullName>
                    <label>INTERPRETACIÓN CEVECO</label>
                </value>
                <value>
                    <fullName>24</fullName>
                    <label>INTERPRETACIÓN LZ</label>
                </value>
                <value>
                    <fullName>25</fullName>
                    <label>M2/UNIDADES</label>
                </value>
                <value>
                    <fullName>26</fullName>
                    <label>ERROR HOMESERVE</label>
                </value>
                <value>
                    <fullName>27</fullName>
                    <label>OTROS</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AB_TXT_Descripcion__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AB_TXT_Identificador__c</fullName>
        <description>Identificador externo para la carga de abonos</description>
        <externalId>true</externalId>
        <label>Identificador</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB_TXT_Observaciones__c</fullName>
        <label>Observaciones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Propuesta de Abono</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>AB_TXT_Descripcion__c</columns>
        <columns>AB_CAS_Abono_Automatico__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
        <language>es</language>
    </listViews>
    <nameField>
        <displayFormat>AB-{0000000}</displayFormat>
        <label>Abono</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propuestas de Abonos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cuenta_a_ingresar_es_cuenta_del_caso</fullName>
        <active>true</active>
        <description>Comprobar que la cuenta a ingresar coincide con la cuenta o la compañía del caso pade del abono</description>
        <errorConditionFormula>(AB_LKP_Ingresar_a__c != AB_LKP_Caso__r.CAS_LKP_Compania__c) &amp;&amp; (AB_LKP_Ingresar_a__c != AB_LKP_Caso__r.AccountId)</errorConditionFormula>
        <errorMessage>El campo &quot;Ingresa a (CIA/Cliente)&quot; debe rellenarse con la compañía o la cuenta de la intervención asociada.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Gestor_Ab_estado_Nuevo</fullName>
        <active>true</active>
        <description>El gestor de reclamaciones solamente puede crear Abonos manuales en estado &quot;Nuevo&quot;.</description>
        <errorConditionFormula>AND($Profile.Name = &quot;Gestor Reclamaciones&quot;, NOT(ISPICKVAL(AB_SEL_Estado__c,&quot;04&quot;)),
 ISNEW())</errorConditionFormula>
        <errorMessage>El abono solo se puede crear en estado &quot;Nuevo&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ingresar_a_mayor_que_total</fullName>
        <active>true</active>
        <description>‘Importe ingresar a’ debe ser menor o igual al campo del servicio/intervención asociado</description>
        <errorConditionFormula>IF(NOT(ISBLANK(AB_LKP_Orden_de_Trabajo__c)), 
IF(OR(AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Compania&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2C_ppal&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2B_B2B2C_ppal&apos;), 
AB_LKP_Orden_de_Trabajo__r.OTR_RES_Subtotal_Partidas__c &lt; AB_DIV_Importe_a_ingresar__c, 
AB_LKP_Orden_de_Trabajo__r.OTR_RES_Facturar_Cliente_AI__c &lt; AB_DIV_Importe_a_ingresar__c), 
IF(OR(AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Compania&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2C_ppal&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2B_B2B2C_ppal&apos;), 
AB_LKP_Caso__r.CAS_DIV_Total_Facturar_CIA_AI__c &lt; AB_DIV_Importe_a_ingresar__c, 
AB_LKP_Caso__r.CAS_DIV_Total_Facturar_Cliente_AI__c &lt; AB_DIV_Importe_a_ingresar__c))</errorConditionFormula>
        <errorMessage>El importe a ingresar debe ser menor o igual que el importe facturado a CIA/Cliente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_se_puede_modificar_abono_liquidado</fullName>
        <active>true</active>
        <errorConditionFormula>AND
   (
    NOT
	   (
	    ISCHANGED(AB_CAS_Abono_Liquidado__c)
		),
	AB_CAS_Abono_Liquidado__c,
    NOT(ISNEW()) 
	)</errorConditionFormula>
        <errorMessage>No se pueden modificar abonos que ya estén liquidados</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relacion_imputar_importe</fullName>
        <active>true</active>
        <description>Revisa si un &quot;imputar a:&quot; tiene su importe asociado</description>
        <errorConditionFormula>OR(
	AND(
		AB_DIV_Importe_a_Imputar4__c = 0,
                !ISBLANK(AB_LKP_Imputar_a4__c)
		),
	AND(AB_DIV_Importe_a_Imputar4__c &gt; 0,
		ISBLANK(AB_LKP_Imputar_a4__c)
		),
	AND(AB_DIV_Importe_a_Imputar5__c = 0,
		!ISBLANK(AB_LKP_Imputar_a5__c)
		),
	AND(AB_DIV_Importe_a_Imputar5__c &gt; 0,
		ISBLANK(AB_LKP_Imputar_a5__c)
		),
	AND(AB_DIV_Importe_a_Imputar6__c = 0,
		!ISBLANK(AB_LKP_Imputar_a6__c)
		),
	AND(AB_DIV_Importe_a_Imputar6__c &gt; 0,
		ISBLANK(AB_LKP_Imputar_a6__c)
		),
	AND(AB_DIV_Importe_a_Imputar__c = 0,
		!ISBLANK(AB_LKP_Imputar_a__c)
		),
	AND(AB_DIV_Importe_a_Imputar__c &gt; 0,
		ISBLANK(AB_LKP_Imputar_a__c)
		),
	AND(AB_DIV_Importe_a_Imputar2__c = 0,
		!ISBLANK(AB_LKP_Imputar_a2__c)
		),
	AND(AB_DIV_Importe_a_Imputar2__c &gt; 0,
		ISBLANK(AB_LKP_Imputar_a2__c)
		),
	AND(AB_DIV_Importe_a_Imputar3__c = 0,
		!ISBLANK(AB_LKP_Imputar_a3__c)
		),
	AND(AB_DIV_Importe_a_Imputar3__c &gt; 0,
		ISBLANK(AB_LKP_Imputar_a3__c)
		)
	)</errorConditionFormula>
        <errorMessage>Debe rellenarse tanto el profesional/gestor como el importe a imputar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rellenar_Imputar_a</fullName>
        <active>true</active>
        <description>Para abonos generados de forma no automático, se debe rellenar al menos un lkp de los denominados imputar a, ya que debe haber al menos un evento asociado a dicho abono</description>
        <errorConditionFormula>AND(
	AB_CAS_Abono_Automatico__c = false, 
	ISBLANK(AB_LKP_Imputar_a__c), 
	ISBLANK(AB_LKP_Imputar_a2__c),
	ISBLANK(AB_LKP_Imputar_a3__c),
	ISBLANK(AB_LKP_Imputar_a4__c),
	ISBLANK(AB_LKP_Imputar_a5__c),
	ISBLANK(AB_LKP_Imputar_a6__c),
        ISBLANK(AB_DIV_Importe_a_imputar_Departamento__c)
	)</errorConditionFormula>
        <errorMessage>Se debe imputar al menos a un profesional o gestor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rellenar_Observaciones_Abono_Rechazado</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(AB_SEL_Estado__c,&quot;03&quot;)&amp;&amp;(AB_TXT_Observaciones__c = &apos;&apos;)</errorConditionFormula>
        <errorMessage>Si se rechaza la propuesta de Abono hay que indicar el motivo en el campo &apos;Observaciones&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Suma_importes_gestor</fullName>
        <active>true</active>
        <description>La suma de importes a gestores debe ser menor o igual al campo del servicio/intervención asociado</description>
        <errorConditionFormula>IF(NOT(ISBLANK(AB_LKP_Orden_de_Trabajo__c)), 
IF(OR(AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Compania&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2C_ppal&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2B_B2B2C_ppal&apos;), 
AB_LKP_Orden_de_Trabajo__r.OTR_RES_Subtotal_Partidas__c &lt; ( AB_DIV_Importe_a_Imputar__c + AB_DIV_Importe_a_Imputar2__c +AB_DIV_Importe_a_Imputar3__c+AB_DIV_Importe_a_imputar_Departamento__c), 
AB_LKP_Orden_de_Trabajo__r.OTR_RES_Facturar_Cliente_AI__c &lt; ( AB_DIV_Importe_a_Imputar__c + AB_DIV_Importe_a_Imputar2__c +AB_DIV_Importe_a_Imputar3__c+AB_DIV_Importe_a_imputar_Departamento__c)), 
IF(OR(AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Compania&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2C_ppal&apos;,AB_LKP_Ingresar_a__r.CUE_FOR_RTDevName__c == &apos;Account:CUE_Cliente_B2B_B2B2C_ppal&apos;), 
AB_LKP_Caso__r.CAS_DIV_Total_Facturar_CIA_AI__c &lt; ( AB_DIV_Importe_a_Imputar__c + AB_DIV_Importe_a_Imputar2__c +AB_DIV_Importe_a_Imputar3__c+AB_DIV_Importe_a_imputar_Departamento__c), 
AB_LKP_Caso__r.CAS_DIV_Total_Facturar_Cliente_AI__c &lt; ( AB_DIV_Importe_a_Imputar__c + AB_DIV_Importe_a_Imputar2__c +AB_DIV_Importe_a_Imputar3__c+AB_DIV_Importe_a_imputar_Departamento__c)))</errorConditionFormula>
        <errorMessage>El importe imputado a gestores debe ser menor o igual al importe total facturado a CIA/Cliente</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Suma_importes_profesional</fullName>
        <active>true</active>
        <description>La suma de importes a profesional debe ser menor o igual al campo del servicio/intervención asociado</description>
        <errorConditionFormula>IF(NOT(ISBLANK(AB_LKP_Orden_de_Trabajo__c)),AB_LKP_Orden_de_Trabajo__r.OTR_RES_Liquidar_prof_AI__c &lt; ( AB_DIV_Importe_a_Imputar4__c + AB_DIV_Importe_a_Imputar5__c +AB_DIV_Importe_a_Imputar6__c), AB_LKP_Caso__r.CAS_DIV_Total_Facturar_Profesional__c &lt; ( AB_DIV_Importe_a_Imputar4__c + AB_DIV_Importe_a_Imputar5__c +AB_DIV_Importe_a_Imputar6__c))</errorConditionFormula>
        <errorMessage>El importe imputado a profesionales debe ser menor o igual al importe liquidado al profesional</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>control_sobrepaso_importes</fullName>
        <active>false</active>
        <description>Controla que los importes de facturación no sobrepasen el total del importe a ingresar</description>
        <errorConditionFormula>AB_DIV_Importe_a_ingresar__c   &lt;&gt;  (AB_DIV_Importe_a_Imputar__c+AB_DIV_Importe_a_Imputar2__c+AB_DIV_Importe_a_Imputar3__c+AB_DIV_Importe_a_Imputar4__c+AB_DIV_Importe_a_Imputar5__c+AB_DIV_Importe_a_Imputar6__c)</errorConditionFormula>
        <errorMessage>La suma de importes facturados debe ser igual el importe total a ingresar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>importe_menor_servicio_asociado</fullName>
        <active>true</active>
        <description>el importe introducido es menor o igual al campo del servicio asociado</description>
        <errorConditionFormula>IF(OR(AB_LKP_Ingresar_a__r.RecordType.DeveloperName = &quot;CUE_Compania&quot;, AB_LKP_Ingresar_a__r.RecordType.DeveloperName = &quot;CUE_Cliente_B2B_B2B2C_ppal&quot;,AB_LKP_Ingresar_a__r.RecordType.DeveloperName = &quot;CUE_Cliente_B2C_ppal&quot;),  AB_LKP_Orden_de_Trabajo__r.OTR_RES_Subtotal_Partidas__c &gt;  AB_LKP_Caso__r.CAS_DIV_Total_Facturar_CIA_AI__c,  AB_LKP_Orden_de_Trabajo__r.OTR_RES_Facturar_Cliente_AI__c &gt;  AB_LKP_Caso__r.CAS_DIV_Total_Facturar_Cliente_AI__c )</errorConditionFormula>
        <errorMessage>el importe introducido es menor o igual al campo del servicio asociado</errorMessage>
    </validationRules>
</CustomObject>